--- a/slnHangMan/HangMan.App/Web.config
+++ b/slnHangMan/HangMan.App/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-HangMan.App-20170622091002.mdf;Initial Catalog=aspnet-HangMan.App-20170622091002;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="hangmanEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PROGRAMACION\SVRHABA2;initial catalog=hangman;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
